Updated embedded web page

--- a/embedded.html
+++ b/embedded.html
@@ -4,6 +4,6 @@
     <title>scrpg_character_creator</title>
 </head>
 <body>
-    <iframe width="1920" height="2000" src=/index.html />
+    <iframe width="1890" height="2100" style="border:none;" src=/index.html />
 </body>
 </html>
