--- a/embedded.html
+++ b/embedded.html
@@ -3,7 +3,7 @@
 <head>
     <title>scrpg_character_creator</title>
 </head>
-<body>
-    <iframe width="1890" height="2100" style="border:none;" src=/index.html />
+<body style="margin:0px;padding:0px">
+    <iframe width="1920" height="100%" frameborder="0" style="overflow:hidden;overflow-y:hidden;height:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" src=/index.html></iframe>
 </body>
 </html>
